# ELEC-3210-Introduction-to-Mobile-Robotics

./: LICENSE  a_star_dev.sh  docker-compose.yml  docker_for_demo.bash  ekf_slam_dev.sh  icp_odom_dev.sh  readme.md  readme_3d.md  readme_demo.md  readme_ros.md
demo1_harris_corner/: CMakeLists.txt  Harris.cpp  readme.md
demo2_sift+ransac/: CMakeLists.txt  RANSAC.cpp  readme.md
demo3_cubic_spline/: index.ipynb  readme.md
demo4_mpc_alm/: index.ipynb  readme.md
ekf_slam/src/: ekf_slam.cpp
icp_odom/src/: icp.cpp
project1_icp_odom/launch/: default.rviz
project1_icp_odom/src/: icp.cpp  parameters.cpp
project2_ekf_slam/src/: ekf_slam.cpp
project3_a_star/grid_path_searcher/launch/: demo.launch
project3_a_star/grid_path_searcher/launch/rviz_config/: demo.rviz
project3_a_star/grid_path_searcher/src/: Astar_searcher.cpp  demo_node.cpp
project3_a_star/waypoint_generator/src/: waypoint_generator.cpp
